# makepy

./: .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-packages.txt  docker-requirements.txt  ezsetup  eztox  eztox.py  makepy.cfg  project.cfg  project.mk  setup.cfg  setup.py  tox.ini
cloudbuild/: build.yaml  buildstatus.js  cloudbuild.yaml  package.json  tag.yaml
examples/: jsonlog.py  justlogit.py  myezcli.py  pimpycli.py
ezparz/: __init__.py  __main__.py  parser.py
make/: makepy.mk  project.mk  tests.mk  twine.mk  vars.mk
makepy/: __datafiles__.py  __init__.py  __main__.py  __setup__.py  __templates__.py  _datafiles.py  _makefiles.py  _templates.py  argparse.py  cli.py  commands.py  config.py  mainlog.py  project.py  python.py  shell.py  tox.py
pimpy/: __datafiles__.py  __main__.py  __templates__.py  argparse.py  cli.py  ezsetup.py  mainlog.py  shell.py  tox.py
tests/: install.rc  test_argparse.py  test_examples.sh  test_ezparz.py  test_images.sh  test_init.sh  test_log.py  test_makepy.sh  test_namespace.sh  test_project.sh  test_shell.py  test_versions.sh
tests/py/: test_argparse.py  test_log.py  test_modules.py  test_python.py
