[bdist_wheel]
universal=0

[metadata]
license_file = LICENSE.txt

[flake8]
ignore = E402,E301,E302,E501,E305,E221,W391,E401,E241,E701,E231,E704,E251,E271,E272,E702,E226,E306,E201,E902,E722,E741
exclude = ./backport .tox build

[makepy]
# The makepy section in setup.cfg contains all custom parameters
# required by setup.py to install the package and to build the dist files.

author      = Uwe Jugel
email       = uwe.jugel@gmail.com
github_name = ubunatic

# if license is changed, also update the classifiers
license     = MIT
name        = makepy
description = makepy: Handsfree Python Module Programming
# readme_format = text/markdown

# 3 - Alpha, 4 - Beta, 5 - Production/Stable
status = Development Status :: 4 - Beta
requires = typing future argparse configparser
## TODO: remove tox dep for regular non-dev makepy usage
## TODO: use sub config for install variants:
## 	all:  typing future argparse   # installed for all variants
##	   log:  structlog colorama
##    dev:  structlog colorame tox

# see: https://packaging.python.org/en/latest/requirements.html
keywords = argparse logging structlog cli arguments ArgumentParser enhancement automation tox testing

# see: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Topic :: Software Development :: Libraries
	Intended Audience :: Developers
   License :: OSI Approved :: MIT License

scripts =
	makepy=makepy.cli:main

# supported versions
python_versions = 2 2.5 2.6 2.7 3 3.3 3.4 3.5 3.6
python_requires = >=2.5
# used as additional `requires`
# backport_deps =
# default_deps  =

